# DevOps-Course-Starter-02

./: .dockerignore  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  Update_card.py  create-remote-storage.tf  documnetation  main.tf  outputs.tf  pyproject.toml  service.yaml  variables.tf
.github/workflows/: continuous-integration-workflow.yml  deployment.yaml  heroku-deploy-main.yml  heroku-deploy.yml
Documentation/: C4 Model  .xml
todo_app/: .env.test.py  Dockerfile  app.py  appModuleEleven.py  app_mongo.py  flask_config.py  my_ansible-inventory  my_ansible_.env.j2  my_ansible_playbook.yml  test_app.py  test_view_model.py  test_view_status.py  todoapp_service
todo_app/data/: item.py  mongo_items.py  mongo_items_Two.py  mongo_items_Vone.py  mongo_items_Vtwo.py  mongo_items_collect.py  trello_items.py  user_model.py  view_model.py
todo_app/templates/: index.html
