[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A simple ToDo app for your DevOps apprenticeship"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.0.2"
python-dotenv = "^0.14.0"
requests = "^2.27.1"
mongo = "^0.2.0"
pymongo = "^4.2.0"
certifi = "^2022.6.15"
mongomock = "^4.1.2"
Flask-Login = "^0.6.2"
logger = "^1.4"
loggly-python-handler = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
